--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,7 +1,7 @@
 body{
     display: flex;
     flex-direction: column;
-   
+   background-color: aliceblue;
 
 }
 main{
@@ -12,7 +12,8 @@ main{
 }
 
 article{
-
+    border: turquoise;
+border-radius: 2px;
     flex: 2;
     overflow-y: auto
 }
