--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -175,5 +175,127 @@ body {
 
 
 }
+.tutorials {
+    text-align: center;
+    padding: 50px 20px ;
+    
+}
 
+.tutorials-grid {
+    display: flex;
+    justify-content: center;
+    gap: 20px;            
+    margin-top: 30px;
+    max-width: 1100px;    
+    margin-inline: auto;  
+}
+}
+
+.tutorial-card {
+    flex: 0 0 23%;       
+    max-width: 260px;     
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px 15px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-container {
+    position: relative;
+    width: 100%;
+}
+
+.img-container .main-img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+}
+
+.img-container .play-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 64px;
+    height: 64px;
+    cursor: pointer;
+}
+
+.tutorial-card h3 {
+    margin: 15px 0 10px 0;
+}
+
+.tutorial-card p {
+    font-size: 0.9rem;
+    color: #555;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.author-rating {
+    display: flex;
+    flex-direction: column;   
+    align-items: flex-start;  
+    gap: 5px;  
+}
+
+.author {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.rating p {
+    margin: 0;
+    font-size: 0.8rem;
+}
+.membership-box {
+
+background-color: #071629;
+text-align: center;
+height: 502px;
+justify-content: center;
+ 
+
+}
+.heading{
+
+    text-align: center;
+    color: white;
+}
+.contents{
+
+    display: flex;
+}
+.group {
+
+color: white;
+text-align: center;
+
+margin: 130px 56px 70px 10px;
+
+}
+.secondary-btn{
+
+  margin-top: 100px;
+  
+  padding: 7px 2px;
+  border-radius: 10px;
+  border: none;
+  background-color: #c271ff;
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  width: 162px;
+  height: 44;
+  
 }
