--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -299,3 +299,45 @@ margin: 130px 56px 70px 10px;
   height: 44;
   
 }
+.faqs {
+  display: flex;
+  gap: 20px;
+  margin-top: 50px;
+  margin-bottom: 30ps;
+  margin-right: 100px;
+  margin-left: 100px;
+  justify-content: center;
+}
+
+.card {
+
+display: flex;
+flex-direction: column;
+}
+h2{
+  text-align: center;
+  margin-top: 40px;
+  
+}
+.card > h3{
+  text-align: center;
+  margin-top: 10px;
+  font-size: 16px;
+  
+}
+.card > p{
+  
+  margin-top: 40px;
+  width: 350px;
+  height: 192px;
+  margin-left: 40px;
+  margin-right: 40px;
+  font-size: 14px;
+  
+
+}
+.top{
+font-weight: lighter;
+font-size: 60px;
+}
+
