--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -13,6 +13,8 @@
     src: url("fonts/SourceSansPro-Semibold.otf") format("opentype");
 }
 
+
+
 /* Page wrapper */
 .page-wrapper {
     max-width: 1000px;
@@ -109,8 +111,45 @@ header {
     transform: scale(1.03);
 }
 
+.first{
+
+align-content: center;
+margin: 70px 150px;
+text-align: center;
 
 
+}
+.first h1{
+
+font-family: "Source-Sans-Pro-semibold";
+}
+.first p{
+
+font-family: "Source-Sans-Pro-regular";
+
+}
+.icons{display: flex;
+flex-direction: row;
+text-align: center;
+margin-left: 70px;
+margin-right: 70px;
+gap: 20px;
+}
+
+.icons i{font-size: 62px; 
+  color: #FF6565;
+}
+.icons h2{
+    font-size: 18px;
+    font-family: "Source-Sans-Pro-semibold";
+
+}
+.icons p{
+    font-size: 14px;
+     font-family: "Source-Sans-Pro-regular";
+
+}
+ 
  
 @media (max-width: 480px) {
 
@@ -158,7 +197,7 @@ header {
         list-style: none;
         padding: 0;
         color: white;
-        gap: 20px;
+        gap: 20pxz;
     }
 
     
@@ -197,4 +236,35 @@ header {
         margin: 20px auto;
         display: block;
     }
+
+    .first{
+ text-align: center;
+
+    }
+    .first h1{
+    margin: -30px;
+     margin-top: 20px;
+}
+.first p{
+    margin: -30px;
+     margin-top: 50px;
+}
+
+      .icons{
+
+         flex-direction: column;
+         
+        
+        
+      }
+      .icons p{
+        
+        line-break: 50px;
+        word-wrap: break-word;
+        max-width: 200px;
+        margin-left: 60px;
+      }
+
+
+
 }
