--- a/headphones/4-styles.css
+++ b/headphones/4-styles.css
@@ -427,7 +427,7 @@ min-height: 250px;
     display: flex;
     flex-direction: column;
     margin-left: 30%;
-    margin-bottom: 60px;
+    padding: 40px 40px 50px 20px;
            }
 
 .foot-back{
