--- a/headphones/8-styles.css
+++ b/headphones/8-styles.css
@@ -28,10 +28,12 @@
 /* Header hero */
 header {
     background: url(images/headphones_hero_1.jpg);
-    height: 800px;
+    height: 100vh;
+    width: 100vw;
     background-size: cover;
-    background-position: center;
+    
     color: white;
+    
 }
 
 /* ---------------- DESKTOP ---------------- */
