--- a/headphones/8-styles.css
+++ b/headphones/8-styles.css
@@ -31,7 +31,7 @@ header {
     height: 100vh;
     width: 100vw;
     background-size: cover;
-    
+    background-position: center;
     color: white;
     
 }
