--- a/headphones/3-styles.css
+++ b/headphones/3-styles.css
@@ -135,6 +135,7 @@ text-align: center;
 margin-left: 70px;
 margin-right: 70px;
 gap: 20px;
+justify-content: center;
 }
 
 .icons i{font-size: 62px; 
@@ -181,7 +182,7 @@ gap: 20px;
     justify-content: center;
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    gap: 150px;
     padding: -80px;
 }
 
@@ -391,6 +392,7 @@ gap: 20px;
     flex-direction: column;
     margin-left: 30%;
     margin-bottom: 60px;
+    gap: 40px;
            }
           
 
