--- a/headphones/7-styles.css
+++ b/headphones/7-styles.css
@@ -146,6 +146,7 @@ font-family: "Source-Sans-Pro-regular";
     padding: 20px;
     transition: transform .3s ease, box-shadow .3s ease;
     cursor: pointer;
+    justify-content: center;
           }
        .icons > div:hover {
     transform: scale(1.07);
